--- a/climate_change.html
+++ b/climate_change.html
@@ -106,7 +106,7 @@ York Times</a>
 <ul>
 <li>Introduction to Climate Science <a href="https://open.oregonstate.education/climatechange">Free Online Textbook</a>
 <li>Intergovernmental Panel on Climate Change <a href="http://www.ipcc.ch/">IPCC</a>: A summary of
-the peer-reviewed scientific literature is available as the 5th Assessment Report <a href="http://www.ipcc.ch/report/ar5/">(AR5)</a>.
+the peer-reviewed scientific literature is available as the 6th Assessment Report <a href="https://www.ipcc.ch/report/sixth-assessment-report-working-group-i/">(AR6)</a>.
 <li>National Academy of Sciences <a href="https://www.nap.edu/catalog/25733/climate-change-evidence-and-causes-update-2020">NAS</a>
 <li>American Meteorological Society <a href="https://www.ametsoc.org/index.cfm/ams/policy/policy-memos/the-dangers-and-consequences-of-climate-change/">AMS</a>
 <li><a href="http://www.globalchange.gov">US Global Change Research Program (National Climate Assessment)</a>
