--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 <div id="headshot">
 <!img src="schmittner_andreas.jpg" alt="AS" style="height:160px;float:left;margin-top:10px">
-<img src="portrait.jpg" alt="AS" style="height:160px;float:left;margin-top:10px"></div>
+<!img src="portrait.jpg" alt="AS" style="height:160px;float:left;margin-top:10px">
+<img src="portrait_2022-09.jpg" alt="AS" style="height:160px;float:left;margin-top:10px"></div>
 
 <div id="address" style="height:160px;width:330px;float:right;">
 <p style="text-align:right"><br>
