--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -18,6 +18,7 @@
 <li class="menue"><a class="menue" href="#opportunity">Opportunity</a></li>
 <li class="menue"><a class="menue" href="#publications">Publications</a></li>
 <li class="menue"><a class="menue" href="#presentations">Presentations</a></li>
+<li class="menue"><a class="menue" href="#reports">Reports</a></li>
 <li class="menue"><a class="menue" href="#outreach">Outreach</a></li>
 <li class="menue"><a class="menue" href="#people">People</a></li>
 </ul>
@@ -138,6 +139,15 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 </li>
 </div><!--Presentations-->
 
+<div id="reports" style="width:1100px;float:left">
+<a id="reports"><h2>Reports</h2></a>
+<li>Stahr, E., and A. Schmittner<br>
+<b>Reconstructing Atlantic Meridional Overturning Circulation during Heinrich Stadial 1 using carbon isotopes</b>
+<div class="journal"><i>Research Experiences for Undergraduates</i>, Aug, 2022</div>
+<div class="publinks">
+<a class="publinks" href="FinalREUPaperStahr.pdf">pdf</a>
+</div></li>
+</div><!--Reports-->
 
 <div id="people" style="width:1100px;float:left">
 <a id="people"><h2>People</h2></a>
