added group members

--- a/group.html
+++ b/group.html
@@ -29,7 +29,23 @@
 <div><h2>Current Group Members</h2>
 
 <ul>
+<li><h3>Jithin Abraham K</h3>
+Postdoc
+Project: <a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning Circulation in the Modern and Glacial Ocean</a><br>
+Start: Winter 2022 - current<br>
+
+<li><h3>Eric Mortenson</h3>
+Postdoc
+Project: <a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a><br>
+Start: Fall 2021 - current<br>
+
+<li><h3>Mia El-Khazen</h3>
+Graduate Student (PhD)
+Project: <a href="Projects/Nd">Modeling the Ocean Distribution of Neodymium Isotopes: Testing the Bottom-Up Hypothesis</a><br>
+Start: Winter 2022 - current<br>
+
 <li><h3>Nathaniel Fillman</h3>
+Graduate Student (MS)
 Project: <a href="Projects/OceanCarbon">NSFGEO-NERC: Quantifying the Modern and Glacial Ocean’s Carbon Cycle Including Isotopes</a><br>
 Start: Summer 2020 - current<br>
 
