added link for Jithin

--- a/group.html
+++ b/group.html
@@ -29,7 +29,7 @@
 <div><h2>Current Group Members</h2>
 
 <ul>
-<li><h3>Jithin Abraham K</h3>
+<li><h3><a href="https://sites.google.com/view/jithinabrahamk">Jithin Abraham K</a></h3>
 Postdoc
 Project: <a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning Circulation in the Modern and Glacial Ocean</a><br>
 Start: Winter 2022 - current<br>
