added 6OCA to publications

--- a/publications.html
+++ b/publications.html
@@ -677,6 +677,13 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 
 <a id="other"><h2>Other Publications</h2></a>
 
+<li>Rupp, D. E., and A. Schmittner (2023)<br> 
+<b>Arctic Amplification</b> 
+<div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
+
+</li>
+
+
 <li>Kilbourne, H., M. Klockmann, E. Moreno-Chamarro, P. Ortega, A. Romanou, M. Srokosz, Z. Szuts, K. Thirumalai, I. Hall, P. Heimback, D. Oppo, A. Schmittner, and R. Zhang (2017)<br> 
 <b>Connecting paleo and modern oceanographic data to understand AMOC over decades to centuries</b> 
 <div class="journal"><i>A US CLIVAR Workshop Report,</i> Report 2017-3, 26pp., doi:10.5065/D6KP80KR.</div>
