added 6OCA to index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ available and free for everybody do download and use. Click on the MODELS link a
 interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/climatevoices/schmittner/"> Here </a> is an interview about my life and career as part of OSU's Voices of a Warming Planet project.</p>
 
 <h2>Just Published</h2>
+
+<li>Rupp, D. E., and A. Schmittner (2023)<br> 
+ <b>Arctic Amplification</b> 
+ <div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
+</li>
+
 <li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2022)<br> 
 	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
 	<div class="journal"><i>Earth System Science Data,</i>14, 2553–2611, 
