modified 6OCA entry

--- a/publications.html
+++ b/publications.html
@@ -678,9 +678,12 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <a id="other"><h2>Other Publications</h2></a>
 
 <li>Rupp, D. E., and A. Schmittner (2023)<br> 
-<b>Arctic Amplification</b> 
-<div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
-
+ <b>Arctic Amplification</b> 
+ <div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5399/osu/1161">html</a>
+		<a class="publinks" href="https://ir.library.oregonstate.edu/downloads/d791sq32j?locale=en">pdf</a>
+	</div>
 </li>
 
 
