--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 <li>Rupp, D. E., and A. Schmittner (2023)<br> 
  <b>Arctic Amplification</b> 
  <div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
-</li>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5399/osu/1161">html</a>
+		<a class="publinks" href="https://ir.library.oregonstate.edu/downloads/d791sq32j?locale=en">pdf</a>
+	</div>
+<</li>
 
 <li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2022)<br> 
 	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
