added 6OCA to climate_change

--- a/climate_change.html
+++ b/climate_change.html
@@ -35,6 +35,7 @@
 <li><a class="menueright" href="#ethics">Ethics and Religion</a></li>
 <li><a class="menueright" href="#humor">Humor</a></li>
 <li><a class="menueright" href="#news">News</a></li>
+<li><a class="menueright" href="#oregon">Oregon</a></li>
 <li><a class="menueright" href="#policy">Policy</a></li>
 <li><a class="menueright" href="#science">Science</a></li>
 <li><a class="menueright" href="#skeptics">Skeptics</a></li>
@@ -101,6 +102,11 @@ Climate science and the public
 York Times</a>
 </ul>
 
+<a id="policy"><h2> Oregon </h2></a>
+<ul>
+<li><a href="https://doi.org/10.5399/osu/1161">6th Oregon Climate Assessment</a> 
+</ul>
+
 <a id="policy"><h2> Policy </h2></a>
 <ul>
 <li><a href="http://www.pewclimate.org/">Pew Center on Climate Change</a> 
@@ -158,5 +164,5 @@ if you know if additional sites.<br>
 
 <a href="https://andreasschmittner.github.io/">back</a><br>
 
-Last updated Mar 5, 2021</p>
+Last updated Oct 26, 2022</p>
 </div>
