--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -149,6 +149,24 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 </div></li>
 </div><!--Reports-->
 
+<div id="data" style="width:1100px;float:left">
+<a id="data"><h2>Data</h2></a>
+<li>Muglia, J., Mulitza, S., Repschläger, J., Schmittner, A., Lembke-Jene, L., Mix, A., Saraswat, R., Sikes, E., Waelbroeck, C., Gottschalk, J., Lippold, J., Lund, D., Martinez-Mendez, G., Michel, E., Muschitiello, F., Naik, S., Okazaki, Y., Stott, L., Voelker, A., & Zhao, N. (2023)<br>
+<b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation (1.1) [Data set]</b>
+	<div class="journal"><i>Zenodo</i>, 
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.7502756">doi: 10.5281/zenodo.7502756 (v1.1)</a>,
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.7234738">doi: 10.5281/zenodo.7234738 (latest version)</a>.
+	</div>
+</li>
+</div><!--Data-->
+
+<b>Reconstructing Atlantic Meridional Overturning Circulation during Heinrich Stadial 1 using carbon isotopes</b>
+<div class="journal"><i>Research Experiences for Undergraduates</i>, Aug, 2022</div>
+<div class="publinks">
+<a class="publinks" href="FinalREUPaperStahr.pdf">pdf</a>
+</div></li>
+</div><!--Data-->
+
 <div id="people" style="width:1100px;float:left">
 <a id="people"><h2>People</h2></a>
 <ul>
