--- a/group.html
+++ b/group.html
@@ -37,7 +37,12 @@ Start: Winter 2022 - current<br>
 <li><h3>Eric Mortenson</h3>
 Postdoc
 Project: <a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a><br>
-Start: Fall 2021 - current<br>
+Start: April 2022 - current<br>
+
+<li><h3>Jennifer Doran</h3>
+Graduate Student (MS)
+Project: Modeling Sediment Effects on Glacial Carbon and Carbon Isotopes</a><br>
+Start: Fall 2022 - current<br>
 
 <li><h3>Mia El-Khazen</h3>
 Graduate Student (PhD)
