--- a/climate_change.html
+++ b/climate_change.html
@@ -90,7 +90,7 @@ Climate science and the public
 <li><a href="http://w2.vatican.va/content/francesco/en/encyclicals/documents/papa-francesco_20150524_enciclica-laudato-si.html">Pope Francis' encyclica</a>
 </ul>
 
-<a id="news"><h2> Humor </h2></a>
+<a id="humor"><h2> Humor </h2></a>
 <ul>
 <li><a href="humor.html">Jokes </a>
 </ul>
