--- a/humor.html
+++ b/humor.html
@@ -40,10 +40,24 @@
 
 <h2> Description </h2>
 <p>Communicating climate science can benefit from humor. Here are a few climate related jokes.</p>
+<p>The idea to create this collection came from a workshop by Katrina Vickery on climate communication to disengaged audiences, which was funded by NSF award <a class="publinks" href="Projects/LGM_mixing/">2049357</a>. </p> 
+
+<h3> Man announces he will quit drinking by 2050 </h3>
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+<div id="figure" style="float:right;width:500px;overflow:hidden">
+<img src="Climate_Change/humor/old-man-drinking-611x400-1.jpg" width="490" style="margin:5px 5px 5px 5px">
+</div>
+</div><!--figure-->
+<p>A Sydney man has set an ambitious target to phase out his alcohol consumption within the next 29 years, as part of an impressive plan to improve his health. </p> 
+
+<p>The program will see Greg Taylor, 73, continue to drink as normal for the foreseeable future, before reducing consumption in 2049 when he turns 101.</p>
+
+<p>He has assured friends it will not affect his drinking plans in the short or medium term. Taylor said it was important not to rush the switch to non-alcoholic beverages. “It’s not realistic to transition to zero alcohol overnight. This requires a steady, phased approach where nothing changes for at least two decades,” he said, adding that he may need to make additional investments in beer consumption in the short term, to make sure no night out is worse off. Taylor will also be able to bring forward drinking credits earned from the days he hasn’t drunk over the past forty years, meaning the actual end date for consumption may actually be 2060. To assist with the transition, Taylor has bought a second beer fridge which he describes as the ‘capture and storage’ method.
+</p>
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
-<img src="frogs_in_pot_joke.jpeg" width="490" style="margin:5px 5px 5px 5px">
+<img src="Climate_Change/humor/frogs_in_pot_joke.jpeg" width="490" style="margin:5px 5px 5px 5px">
 </div><!--figure-->
 <div style="width:490px;margin:0px 10px 10px 10px">
 <p>From <a class="publinks" href="https://twitter.com/Resilient_Futur/status/1584837863387955200">this</a> twitter post.</p></div>
@@ -51,13 +65,21 @@
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
-<img src="climate_scale_joke.jpeg" width="490" style="margin:5px 5px 5px 5px">
+<img src="Climate_Change/humor/green_marketing.png" width="490" style="margin:5px 5px 5px 5px">
+</div><!--figure-->
+<div style="width:490px;margin:0px 10px 10px 10px">
+</div>
+</div><!--figurebox-->
+
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+<div id="figure" style="float:right;width:500px;overflow:hidden">
+<img src="Climate_Change/humor/climate_scale_joke.jpeg" width="490" style="margin:5px 5px 5px 5px">
 </div><!--figure-->
 <div style="width:490px;margin:0px 10px 10px 10px">
 <p>From <a class="publinks" href="https://twitter.com/richardbranson/status/474597309456465921">this</a> twitter post.</p></div>
 </div><!--figurebox-->
 
-<p>The idea to create this collection came from a workshop by Katrina Vickery on climate communication to disengaged audiences, which was funded by NSF award <a class="publinks" href="Projects/LGM_mixing/">2049357</a>. </p> 
+<br>
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>More Jokes</h2></a>
