--- a/humor.html
+++ b/humor.html
@@ -52,8 +52,18 @@
 
 <p>The program will see Greg Taylor, 73, continue to drink as normal for the foreseeable future, before reducing consumption in 2049 when he turns 101.</p>
 
-<p>He has assured friends it will not affect his drinking plans in the short or medium term. Taylor said it was important not to rush the switch to non-alcoholic beverages. “It’s not realistic to transition to zero alcohol overnight. This requires a steady, phased approach where nothing changes for at least two decades,” he said, adding that he may need to make additional investments in beer consumption in the short term, to make sure no night out is worse off. Taylor will also be able to bring forward drinking credits earned from the days he hasn’t drunk over the past forty years, meaning the actual end date for consumption may actually be 2060. To assist with the transition, Taylor has bought a second beer fridge which he describes as the ‘capture and storage’ method.
+<p>He has assured friends it will not affect his drinking plans in the short or medium term. Taylor said it was important not to rush the switch to non-alcoholic beverages. “It’s not realistic to transition to zero alcohol overnight. This requires a steady, phased approach where nothing changes for at least two decades,” he said, adding that he may need to make additional investments in beer consumption in the short term, to make sure no night out is worse off. </p>
+
+<p>Taylor will also be able to bring forward drinking credits earned from the days he hasn’t drunk over the past forty years, meaning the actual end date for consumption may actually be 2060. To assist with the transition, Taylor has bought a second beer fridge which he describes as the ‘capture and storage’ method.
 </p>
+
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+<div id="figure" style="float:right;width:500px;overflow:hidden">
+<img src="Climate_Change/humor/Fl6rDZ_aAAAz9Ny.jpg" width="490" style="margin:5px 5px 5px 5px">
+</div><!--figure-->
+<div style="width:490px;margin:0px 10px 10px 10px">
+<p>From <a class="publinks" href="https://twitter.com/WilliamJRipple/status/1611914119049023490">this</a> twitter post.</p></div>
+</div><!--figurebox-->
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
