--- a/humor.html
+++ b/humor.html
@@ -59,6 +59,14 @@
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
+<img src="Climate_Change/humor/FjgnCJqaUAEAViA.jpg" width="490" style="margin:5px 5px 5px 5px">
+</div><!--figure-->
+<div style="width:490px;margin:0px 10px 10px 10px">
+<p>From <a class="publinks" href="https://twitter.com/WilliamJRipple/status/1601072875083268096">this</a> twitter post.</p></div>
+</div><!--figurebox-->
+
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+<div id="figure" style="float:right;width:500px;overflow:hidden">
 <img src="Climate_Change/humor/Fl6rDZ_aAAAz9Ny.jpg" width="490" style="margin:5px 5px 5px 5px">
 </div><!--figure-->
 <div style="width:490px;margin:0px 10px 10px 10px">
