added PNAS paper

--- a/publications.html
+++ b/publications.html
@@ -46,8 +46,27 @@
 
 <h3>Published</h3>
 
+<a id="2023"><h4>2023</h4></a>
+<li>Schmittner, A. (2023)<br> 
+ <b>Topography affects not only interhemispheric asymmetry of westerly winds and thus storminess but also ocean circulation</b> 
+ <div class="journal"><i>Proceedings of the National Academy of Sciences,</i> <a class="publinks" href="https://doi.org/10.1073/pnas.2300613120"> doi:10.1073/pnas.2300613120.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.1073/pnas.2300613120">html</a>
+		<a class="publinks" href="https://www.pnas.org/doi/epdf/10.1073/pnas.2300613120">pdf</a>
+	</div>
+</li>
+
+<li>Rupp, D. E., and A. Schmittner (2023)<br> 
+ <b>Arctic Amplification</b> 
+ <div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5399/osu/1161">html</a>
+		<a class="publinks" href="https://ir.library.oregonstate.edu/downloads/d791sq32j?locale=en">pdf</a>
+	</div>
+</li>
+
 <a id="2022"><h4>2022</h4></a>
-<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2021)<br> 
+<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2022)<br> 
 	<b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
 	<div class="journal"><i>Earth System Science Data,</i>14, 2553–2611, 
 		<a class="publinks" href="https://doi.org/10.5194/essd-14-2553-2022">doi: 10.5194/essd-14-2553-2022</a></div>
