--- a/publications.html
+++ b/publications.html
@@ -26,11 +26,9 @@
 
 <div id="links" style="float:right;width:150px">
 <ul class="menueright">
-<li><a class="menueright" href="#2020"> 2020 </a>
-<li><a class="menueright" href="#2019"> 2019 </a>
-<li><a class="menueright" href="#2018"> 2018 </a>
-<li><a class="menueright" href="#2017"> 2017 </a>
-<li><a class="menueright" href="#2016"> 2016 </a>
+<li><a class="menueright" href="#2022"> 2022 </a>
+<li><a class="menueright" href="#2021"> 2021 </a>
+<li><a class="menueright" href="#2020"> 2016-2020 </a>
 <li><a class="menueright" href="#2015"> 2011-2015 </a>
 <li><a class="menueright" href="#2010"> 2001-2010 </a>
 <li><a class="menueright" href="#2000"> 1997-2000 </a>
