--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 <a id="2023"><h4>2023</h4></a>
 <li>Schmittner, A. (2023)<br> 
  <b>Topography affects not only interhemispheric asymmetry of westerly winds and thus storminess but also ocean circulation</b> 
- <div class="journal"><i>Proceedings of the National Academy of Sciences,</i> <a class="publinks" href="https://doi.org/10.1073/pnas.2300613120"> doi:10.1073/pnas.2300613120.</a></div>
+ <div class="journal"><i>Proceedings of the National Academy of Sciences,</i> 120 (10), e2300613120<a class="publinks" href="https://doi.org/10.1073/pnas.2300613120"> doi:10.1073/pnas.2300613120.</a></div>
 	<div class="publinks">
 		<a class="publinks" href="https://doi.org/10.1073/pnas.2300613120">html</a>
 		<a class="publinks" href="https://www.pnas.org/doi/epdf/10.1073/pnas.2300613120">pdf</a>
