added Muglia et al. 2023

--- a/index.html
+++ b/index.html
@@ -94,21 +94,12 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 
 <h2>Just Published</h2>
 
-<li>Schmittner, A. (2023)<br> 
- <b>Topography affects not only interhemispheric asymmetry of westerly winds and thus storminess but also ocean circulation</b> 
- <div class="journal"><i>Proceedings of the National Academy of Sciences,</i> <a class="publinks" href="https://doi.org/10.1073/pnas.2300613120"> doi:10.1073/pnas.2300613120.</a></div>
+<li>Muglia, J., S. Mulitza, J. Repschläger, A. Schmittner, L. Lembke-Jene, L. Lisiecki, A. Mix, R. Saraswat, E. Sikes, C. Waelbroeck, J. Gottschalk, J. Lippold, D. Lund, G. Martinez-Mendez, E. Michel, F. Muschitiello, S. Naik, Y. Okazaki, L. Stott, A. Voelker, and N. Zhao (2023)<br> 
+ <b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation</b> 
+ <div class="journal"><i>Scientific Data, </i> 10(1), 131, <a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2"> doi: 10.1038/s41597-023-02024-2.</a></div>
 	<div class="publinks">
-		<a class="publinks" href="https://doi.org/10.1073/pnas.2300613120">html</a>
-		<a class="publinks" href="https://www.pnas.org/doi/epdf/10.1073/pnas.2300613120">pdf</a>
-	</div>
-</li>
-
-<li>Rupp, D. E., and A. Schmittner (2023)<br> 
- <b>Arctic Amplification</b> 
- <div class="journal"><i>Sixth Oregon Climate Assessment,</i> <a class="publinks" href="https://doi.org/10.5399/osu/1161"> doi:10.5399/osu/1161.</a></div>
-	<div class="publinks">
-		<a class="publinks" href="https://doi.org/10.5399/osu/1161">html</a>
-		<a class="publinks" href="https://ir.library.oregonstate.edu/downloads/d791sq32j?locale=en">pdf</a>
+		<a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2">html</a>
+		<a class="publinks" href="https://www.nature.com/articles/s41597-023-02024-2.epdf?sharing_token=ImHO3K536Mqzz1byHJxTztRgN0jAjWel9jnR3ZoTv0PHqRzdwVEOkwkfQD705vNPldcH6Rnws5zN_Vtld3ZmB951steDvAPmEFJr2cfADMN1BEec0AE3PqUUOkPEIUQA-ei39UX_LnG0PfaTLZnUQFkziPD7FVRv7P5Sqahnrrs%3D">pdf</a>
 	</div>
 </li>
 
