--- a/publications.html
+++ b/publications.html
@@ -26,12 +26,13 @@
 
 <div id="links" style="float:right;width:150px">
 <ul class="menueright">
+<li><a class="menueright" href="#2023"> 2023 </a>
 <li><a class="menueright" href="#2022"> 2022 </a>
 <li><a class="menueright" href="#2021"> 2021 </a>
-<li><a class="menueright" href="#2020"> 2016-2020 </a>
-<li><a class="menueright" href="#2015"> 2011-2015 </a>
-<li><a class="menueright" href="#2010"> 2001-2010 </a>
-<li><a class="menueright" href="#2000"> 1997-2000 </a>
+<li><a class="menueright" href="#2020"> 2020 </a>
+<li><a class="menueright" href="#2015"> 2015 </a>
+<li><a class="menueright" href="#2010"> 2010 </a>
+<li><a class="menueright" href="#2000"> 2000 </a>
 <li><a class="menueright" href="#other">Other Publications</a></li>
 <li><a class="menueright" href="#books">Books</a></li>
 </ul>
@@ -43,6 +44,16 @@
 <a id="in review"><h3>In Review / In Press</h3></a>
 
 <h3>Published</h3>
+
+<a id="2023"><h4>2023</h4></a>
+<li>Muglia, J., S. Mulitza, J. Repschläger, A. Schmittner, L. Lembke-Jene, L. Lisiecki, A. Mix, R. Saraswat, E. Sikes, C. Waelbroeck, J. Gottschalk, J. Lippold, D. Lund, G. Martinez-Mendez, E. Michel, F. Muschitiello, S. Naik, Y. Okazaki, L. Stott, A. Voelker, and N. Zhao (2023)<br> 
+ <b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation</b> 
+ <div class="journal"><i>Scientific Data, </i> 10(1), 131, <a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2"> doi: 10.1038/s41597-023-02024-2.</a></div>
+	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2">html</a>
+		<a class="publinks" href="https://www.nature.com/articles/s41597-023-02024-2.epdf?sharing_token=ImHO3K536Mqzz1byHJxTztRgN0jAjWel9jnR3ZoTv0PHqRzdwVEOkwkfQD705vNPldcH6Rnws5zN_Vtld3ZmB951steDvAPmEFJr2cfADMN1BEec0AE3PqUUOkPEIUQA-ei39UX_LnG0PfaTLZnUQFkziPD7FVRv7P5Sqahnrrs%3D">pdf</a>
+	</div>
+</li>
 
 <a id="2022"><h4>2022</h4></a>
 <li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2022)<br> 
