added data link to Muglia paper

--- a/Projects/Completed/OC3/index.html
+++ b/Projects/Completed/OC3/index.html
@@ -118,6 +118,57 @@ Specific science questions addressed are:
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
 
+<li>Muglia, J., S. Mulitza, J. Repschläger, A. Schmittner, L. Lembke-Jene, L. Lisiecki, A. Mix, R. Saraswat, E. Sikes, C. Waelbroeck, J. Gottschalk, J. Lippold, D. Lund, G. Martinez-Mendez, E. Michel, F. Muschitiello, S. Naik, Y. Okazaki, L. Stott, A. Voelker, and N. Zhao (2023)<br> 
+ <b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation</b> 
+ <div class="journal"><i>Scientific Data, </i> 10(1), 131, <a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2"> doi: 10.1038/s41597-023-02024-2.</a></div>
+    <div class="publinks">
+        <a class="publinks" href="https://doi.org/10.5281/zenodo.7502756">data</a>
+        <a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2">html</a>
+        <a class="publinks" href="https://www.nature.com/articles/s41597-023-02024-2.epdf?sharing_token=ImHO3K536Mqzz1byHJxTztRgN0jAjWel9jnR3ZoTv0PHqRzdwVEOkwkfQD705vNPldcH6Rnws5zN_Vtld3ZmB951steDvAPmEFJr2cfADMN1BEec0AE3PqUUOkPEIUQA-ei39UX_LnG0PfaTLZnUQFkziPD7FVRv7P5Sqahnrrs%3D">pdf</a>
+    </div>
+</li>
+
+<li>Mulitza, S., T. Bickert, H. C. Bostock, C. M. Chiessi, B. Donner, A. Govin, N. Harada, E. Huang, H. Johnstone, H. Kuhnert, M. Langner, F. Lamy, L. Lembke-Jene, L. Lisiecki, J. Lynch-Stieglitz, L. Max, M. Mohtadi, G. Mollenhauer, J. Muglia, D. Nürnberg, A. Paul, C. Rühlemann, J. Repschläger, R. Saraswat, A. Schmittner, E. L. Sikes, R. F. Spielhagen, and R. Tiedemann (2022)<br> 
+    <b>World Atlas of late Quaternary Foraminiferal Oxygen and Carbon Isotope Ratios</b>
+    <div class="journal"><i>Earth System Science Data,</i>14, 2553–2611, 
+        <a class="publinks" href="https://doi.org/10.5194/essd-14-2553-2022">doi: 10.5194/essd-14-2553-2022</a></div>
+    <div class="publinks">
+        <a class="publinks" href="https://essd.copernicus.org/articles/14/2553/2022/">html</a>
+        <a class="publinks" href="https://essd.copernicus.org/articles/14/2553/2022/essd-14-2553-2022.pdf">pdf</a>
+    </div>
+</li>
+
+<li>Repschläger, J., N. Zhao, D. Rand, L. Lisiecki, J. Muglia, S. Mulitza, A. Schmittner, O. Cartapanis, H. Bauch, R. Schiebel, and G. Haug (2021)<br> 
+    <b>Active North Atlantic Deepwater Formation during Heinrich Stadial 1</b>
+    <div class="journal"><i>Quaternary Science Reviews,</i> 270, 107145, 
+         <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.107145">doi: 10.1016/j.quascirev.2021.107145</a>.</div>
+    <div class="publinks">
+        <a class="publinks" href="https://www.sciencedirect.com/science/article/pii/S0277379121003528">html</a>
+        <a class="publinks" href="https://app.wombo.art/card/37216455-df04-4e79-b252-455a2761cb98">wombo art</a>
+    </div>
+</li>
+
+<li>Wilmes, S.-B., J. A. M. Green, and A. Schmittner (2021)<br>
+    <b>Enhanced vertical mixing in the glacial ocean inferred from sedimentary carbon isotopes</b>
+    <div class="journal"><i>Communications Earth & Environment,</i> 2, 166, 
+        <a class="publinks" href="https://doi.org/10.1038/s43247-021-00239-y"> doi: 10.1038/s43247-021-00239-y</a>.</div>
+    <div class="publinks">
+        <a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y"> html </a>
+        <a class="publinks" href="https://www.nature.com/articles/s43247-021-00239-y.pdf"> pdf</a>
+    </div>
+</li>
+
+<li>Muglia, J., and A. Schmittner (2021)<br> 
+    <b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
+    <div class="journal"><i>Quaternary Science Reviews</i>, 257, 106844, 
+     <a class="publinks" href="https://doi.org/10.1016/j.quascirev.2021.106844">doi: 10.1016/j.quascirev.2021.106844</div>
+    <div class="publinks">
+        <a class="publinks" href="hhttps://www.sciencedirect.com/science/article/abs/pii/S0277379121000512">html</a>
+        <a class="publinks" href="https://andreasschmittner.github.io/pdf/M/muglia21qsr.pdf">pdf</a>
+        <a class="publinks" href="https://youtu.be/KaV8GAKDVvM">video</a>
+    </div>
+</li>
+
 <li>Muglia, J. Skinner, L., and A. Schmittner (2018)<br>
 <b>Weak overturning circulation and high Southern Ocean nutrient utilization maximized glacial ocean carbon</b>
 <div class="journal"><i>Earth and Planet. Sci. Let.</i>, 496, 47-56, <a class="publinks" href="http://doi.org/10.1016/j.epsl.2018.05.038">doi:10.1016/j.epsl.2018.05.038</a>.</div>
