--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
  <b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation</b> 
  <div class="journal"><i>Scientific Data, </i> 10(1), 131, <a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2"> doi: 10.1038/s41597-023-02024-2.</a></div>
 	<div class="publinks">
+		<a class="publinks" href="https://doi.org/10.5281/zenodo.7502756">data</a>
 		<a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2">html</a>
 		<a class="publinks" href="https://www.nature.com/articles/s41597-023-02024-2.epdf?sharing_token=ImHO3K536Mqzz1byHJxTztRgN0jAjWel9jnR3ZoTv0PHqRzdwVEOkwkfQD705vNPldcH6Rnws5zN_Vtld3ZmB951steDvAPmEFJr2cfADMN1BEec0AE3PqUUOkPEIUQA-ei39UX_LnG0PfaTLZnUQFkziPD7FVRv7P5Sqahnrrs%3D">pdf</a>
 	</div>
