--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 	</div>
 </li>
 
+<h2>Postdoc Opportunity</h2>
+<p>I'm looking for a postdoc who wants to work on a <a class="publinks" href="https://andreasschmittner.github.io/Projects/LGM_mixing/"> project about ocean mixing</a>. Feel free to contact me if you're interested. <a class="publinks" href="inclusion.html">here</a>.</div></p>
+
 <h2>Committment to Inclusion Statement</h2>
 <p>I believe that different perspectives and backgrounds contribute to a better understanding of our world and of the climate system. For this reason, I value a diverse research team and encourage the expression of different points of view, particularly of voices that have historically been suppressed or underrepresented in climate science. Coming from Germany, I know how much damage hate can produce, but I also know that people can change, reject hate, and embrace an inclusive and supportive community for everybody. However, I also believe that words are not enough and that we must continuously strive towards a more inclusive world. Specific activities regarding diversity and inclusion are listed <a class="publinks" href="inclusion.html">here</a>.</div></p>
 
