--- a/humor.html
+++ b/humor.html
@@ -43,6 +43,14 @@
 <p>The idea to create this collection came from a workshop by Katrina Vickery on climate communication to disengaged audiences, which was funded by NSF award <a class="publinks" href="Projects/LGM_mixing/">2049357</a>. </p> 
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+ <div id="figure" style="float:right;width:500px;overflow:hidden">
+  <img src="Climate_Change/humor/titanic.jpg" width="490" style="margin:5px 5px 5px 5px">
+ </div><!--figure-->
+ <div style="width:490px;margin:0px 10px 10px 10px">
+ </div>
+</div><!--figurebox-->
+
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
 <div id="figure" style="float:right;width:500px;overflow:hidden">
 <img src="Climate_Change/humor/ipccisthisthingon.jpg" width="490" style="margin:5px 5px 5px 5px">
 </div><!--figure-->
