--- a/humor.html
+++ b/humor.html
@@ -44,6 +44,14 @@
 
 <div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
  <div id="figure" style="float:right;width:500px;overflow:hidden">
+  <img src="Climate_Change/humor/climate_conference.jpg" width="490" style="margin:5px 5px 5px 5px">
+ </div><!--figure-->
+ <div style="width:490px;margin:0px 10px 10px 10px">
+ </div>
+</div><!--figurebox-->
+
+<div id="figurebox" style="float:right;width:500px;border:1px solid #ccc;margin:10px 10px 10px 10px">
+ <div id="figure" style="float:right;width:500px;overflow:hidden">
   <img src="Climate_Change/humor/titanic.jpg" width="490" style="margin:5px 5px 5px 5px">
  </div><!--figure-->
  <div style="width:490px;margin:0px 10px 10px 10px">
