added Jithin to LGM mixing page

--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -75,6 +75,7 @@ Circulation in the Modern and Glacial Ocean</h1>
 <div id="people" style="width:1100px;float:left">
 <a id="people"><h2>People</h2></a>
 <ul>
+<li><a href="https://sites.google.com/view/jithinabrahamk">Jithin Abraham K.</a>, Postdoctoral Researcher<br>
 <li><a href="http://people.oregonstate.edu/~schmita2/">Andreas Schmittner</a>, Principle Investigator<br>
 <li><a href="http://www.cgd.ucar.edu/staff/gokhan/">Gokhan Danabasoglu</a>, Co-PI<br>
 <li><a href="https://staff.ucar.edu/users/bachman">Scott Bachman</a>, Co-PI<br>
