Climate_Change/humor/.green_marketing.png.icloud

--- a/Projects/OceanCarbon/index.html
+++ b/Projects/OceanCarbon/index.html
@@ -90,6 +90,16 @@ part of OSU's Science and Math Investigative Lerning Experiences (SMILE) program
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
 
+<li>Fillman, N., A. Schmittner and K. F. Kvale (submitted in 2023)<br> 
+	<b>Variable Stoichiometry Effects on Glacial/Interglacial Ocean Model Biogeochemical Cycles and Carbon Storage</b>
+	<div class="journal"><i>Paleoceanography and Paleoclimatology</i>,
+	 <a class="publinks" href="">doi: </div>
+	<div class="publinks">
+		<a class="publinks" href="https://essopenarchive.org/users/643297/articles/656731-variable-stoichiometry-effects-on-glacial-interglacial-ocean-model-biogeochemical-cycles-and-carbon-storage">html</a>
+		<a class="publinks" href="https://essopenarchive.org/users/643297/articles/656731-variable-stoichiometry-effects-on-glacial-interglacial-ocean-model-biogeochemical-cycles-and-carbon-storage">pdf</a>
+	</div>
+</li>
+
 <li>Muglia, J., and A. Schmittner (2021)<br> 
 	<b>Carbon Isotope Constraints on Glacial Atlantic Meridional Overturning: Strength vs Depth</b>
 	<div class="journal"><i>Quaternary Science Reviews</i>,
