--- a/publications.html
+++ b/publications.html
@@ -403,7 +403,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <li>Galbraith, E. D., Kienast, M., Albuquerque, A. L., Altabet, M., Batista, F., Bianchi, D., Calvert, S. E., Contreras Quintana, S., Crosta, X., De Pol Holz, R., Dubois, N., Etourneau, J., Francois, R., Hsu, T.-C., Ivanochko, T., Jaccard, S. L., Kao, S.-J., Kiefer, T., Kienast, S., Lehmann, M. F., Martinez, P., McCarthy, M., Meckler, A. N., Mix, A. C., Mobius, J., Pedersen, T. F., Quan, T. M., Robinson, R. S., Ryabenko, E., Schmittner, A., Schneider, R., Schneider-Mor, A., Shigemitsu, M., Sinclair, D., Somes, C., Studer, A. S., Tesdal, J.-E., Thunell, R., and Yang, J.-Y. T. (2012) <br>
 <b>The acceleration of oceanic denitrification during deglacial warming,</b> 
 <div class="journal"><i>Nature Geosc.,</i> 6, 579-584, doi:10.1038/ngeo1832.</div>
-<div class="publinks"><a class="publinks" href="http://www.nature.com/ngeo/journal/vaop/ncurrent/full/ngeo1832.html"> html </a> <a class="publinks" href="https://andreasschmittner.github.io/pdf/G/galbraith13natgeo.pdf"> pdf </a> <a class="publinks" href="http://oregonstate.edu/ua/ncs/archives/2013/jun/researchers-document-acceleration-ocean-denitrification-during-deglaciation"> Press Release </a></div>
+<div class="publinks"><a class="publinks" href="https://doi.org/10.1038/ngeo1832"> html </a> <a class="publinks" href="https://andreasschmittner.github.io/pdf/G/galbraith13natgeo.pdf"> pdf </a> <a class="publinks" href="http://oregonstate.edu/ua/ncs/archives/2013/jun/researchers-document-acceleration-ocean-denitrification-during-deglaciation"> Press Release </a></div>
 
 <a id="2012"><h4>2012</h4> </a>
 
@@ -558,7 +558,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 
 <li>Schmittner, A., (2005)<br>
 <b>Decline of the marine ecosystem caused by a reduction in the Atlantic overturning circulation</b>
-<div class="journal"><i>Nature,</i> 434, 628-633.</div>
+<div class="journal"><i>Nature,</i> 434, 628-633, doi:10.1038/nature03476.</div>
 <div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/schmittner05nat.pdf"> pdf </a><a class="publinks" href="http://dx.doi.org/10.1038/nature03476"> html </a></div>
 
 <li>K&oumlsters, F., R. H. K&aumlse, A. Schmittner and P. Herrmann (2005)<br>
