move Jithin, update Eric

--- a/group.html
+++ b/group.html
@@ -29,12 +29,7 @@
 <div><h2>Current Group Members</h2>
 
 <ul>
-<li><h3><a href="https://sites.google.com/view/jithinabrahamk">Jithin Abraham K</a></h3>
-Postdoc
-Project: <a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning Circulation in the Modern and Glacial Ocean</a><br>
-Start: Winter 2022 - current<br>
-
-<li><h3>Eric Mortenson</h3>
+<li><h3><a href="https://sites.google.com/d/1-R7XwAFK_kiaxCMQq-Ucs-9UKZteF1ly/p/1CtccZffUJKSbXmHPkN-z-3W_iMff1NnQ/edit">Eric Mortenson</a></h3>
 Postdoc
 Project: <a href="Projects/AA_ice_ocean">Investigating Antarctic Ice Sheet-Ocean-Carbon Cycle Interactions During the Last Deglaciation</a><br>
 Start: April 2022 - current<br>
@@ -58,6 +53,11 @@ Start: Summer 2020 - current<br>
 
 <div><h2>Previous Group Members</h2>
 <ul>
+<li><h3><a href="https://sites.google.com/view/jithinabrahamk">Jithin Abraham K</a></h3>
+Postdoc
+Project: <a href="Projects/LGM_mixing">Collaborative Research: Mixing and the Meridional Overturning Circulation in the Modern and Glacial Ocean</a><br>
+Start: July 2022 - April 2023<br>
+
 <li><h3><a href="https://www.researchgate.net/profile/Sophie_Berenice_Wilmes">Sophie-Berenice Wilmes</a></h3>
 Project: <a href="Projects/LGM_tides">Collaborative Research: Assessing the Impact of Tidal Mixing on the Meridional Overturning Circulation of the Last Glacial Maximum</a><br>
 Start: Fall 2016 - Winter 2017/2018<br>
