--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -17,6 +17,7 @@ Circulation in the Modern and Glacial Ocean</h1>
 <ul class="menue">
 <li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2">Andreas' Home</a></li>
 <li class="menue"><a class="menue" href="http://people.oregonstate.edu/~schmita2/projects.html">Andreas' Projects</a></li>
+<li class="menue"><a class="menue" href="#opportunity">Job Opportunity</a></li>
 <li class="menue"><a class="menue" href="#results">Results</a></li>
 <li class="menue"><a class="menue" href="#publications">Publications</a></li>
 <li class="menue"><a class="menue" href="#presentations">Presentations</a></li>
@@ -35,6 +36,24 @@ Circulation in the Modern and Glacial Ocean</h1>
 <p>Mixing and the meridional overturning circulation during the last glacial period remain controversial. Shoaling of the interface between North Atlantic Deep Water and Antarctic Bottom Water and increased stratification are two mechanisms that have been suggested to reduce diapycnal mixing. On the other hand, a shift of tidal energy input from the continental shelves to the deep ocean due to sea level lowering has been hypothesized to increase diapycnal mixing. A parameterization of far field mixing effects will be incorporated into the Oregon State University (OSU) version of the intermediate-complexity University of Victoria (UVic) global climate model. Tuning  to modern ocean conditions using modern observations followed by assessment of LGM performance using available paleo observations will permit the examination of these science goals: to investigate how diapycnal mixing in the LGM compares to modern magnitudes; how potential differences may have affected the LGM MOC; and what the consequences of such effects would have been for the global carbon cycle. The parameterizations representing far field effects, tested and tuned in the OSU-UVic model, will also be ported to the newest version of the Modular Ocean Model (MOM6) of the Community Earth System Model (CESM), though extensive tuning, testing and evaluation with CESM is not planned. <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2049357">Abstract at NSF.</p>
 
 <p>More details: <a href="Project_Description_no_endnote.pdf">Project Description</a></p>
+
+<div id="opportunity" style="width:1100px;float:left">
+<a id="opportunity"><h2>Job Opportunity</h2></a>
+<h1>Ocean Modeling Postdoctoral Researcher</h1>
+
+A postdoctoral scholar position for 2 years is available at Oregon State University’s College of Earth, Ocean, and Atmospheric Sciences under the direction of Dr. Andreas Schmittner. 
+
+Effects of (i) internal waves and (ii) mesoscale eddies on ocean mixing will be explored in global climate models. Simulations of present-day and ice-age oceans will be conducted and compared to observations to assess how mixing affects ocean circulation, climate, and the cycling of biogeochemical and isotope tracers.
+
+Applicants, particularly those from groups that are currently underrepresented in climate modeling, with a Ph.D. in oceanography, climate science, physics or a related field, and experience in numerical modeling are encouraged to apply. Please send your CV and cover letter with the names and contact information of three references to andreas.schmittner@oregonstate.edu.
+
+Salary: Commensurate with qualifications and experience as per OSU
+guidelines https://gradschool.oregonstate.edu/postdocs/stipends-and-benefits
+
+The position will be open until filled, at least until Sep. 30, 2023.
+
+Preferable start date: Oct. 2023 – Jan. 2024.
+</div>
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Publications</h2></a>
