--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -41,18 +41,18 @@ Circulation in the Modern and Glacial Ocean</h1>
 <a id="opportunity"><h2>Job Opportunity</h2></a>
 <h3>Ocean Modeling Postdoctoral Researcher</h3>
 
-A postdoctoral scholar position for 2 years is available at Oregon State University’s College of Earth, Ocean, and Atmospheric Sciences under the direction of Dr. Andreas Schmittner. 
+<p>A postdoctoral scholar position for 2 years is available at Oregon State University’s College of Earth, Ocean, and Atmospheric Sciences under the direction of Dr. Andreas Schmittner.</p>
 
-Effects of (i) internal waves and (ii) mesoscale eddies on ocean mixing will be explored in global climate models. Simulations of present-day and ice-age oceans will be conducted and compared to observations to assess how mixing affects ocean circulation, climate, and the cycling of biogeochemical and isotope tracers.
+<p>Effects of (i) internal waves and (ii) mesoscale eddies on ocean mixing will be explored in global climate models. Simulations of present-day and ice-age oceans will be conducted and compared to observations to assess how mixing affects ocean circulation, climate, and the cycling of biogeochemical and isotope tracers.</p>
 
-Applicants, particularly those from groups that are currently underrepresented in climate modeling, with a Ph.D. in oceanography, climate science, physics or a related field, and experience in numerical modeling are encouraged to apply. Please send your CV and cover letter with the names and contact information of three references to andreas.schmittner@oregonstate.edu.
+<p>Applicants, particularly those from groups that are currently underrepresented in climate modeling, with a Ph.D. in oceanography, climate science, physics or a related field, and experience in numerical modeling are encouraged to apply. Please send your CV and cover letter with the names and contact information of three references to andreas.schmittner@oregonstate.edu.</p>
 
-Salary: Commensurate with qualifications and experience as per OSU
-guidelines https://gradschool.oregonstate.edu/postdocs/stipends-and-benefits
+<p>Salary: Commensurate with qualifications and experience as per <a href="https://gradschool.oregonstate.edu/postdocs/stipends-and-benefits">OSU
+guidelines</a>.
 
-The position will be open until filled, at least until Sep. 30, 2023.
+<p>The position will be open until filled, at least until Sep. 30, 2023.</p>
 
-Preferable start date: Oct. 2023 – Jan. 2024.
+<p>Preferable start date: Oct. 2023 – Jan. 2024.</p>
 </div>
 
 <div id="publications" style="width:1100px;float:left">
