--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -50,9 +50,9 @@ Circulation in the Modern and Glacial Ocean</h1>
 <p>Salary: Commensurate with qualifications and experience as per <a href="https://gradschool.oregonstate.edu/postdocs/stipends-and-benefits">OSU
 guidelines</a>.
 
-<p>The position will be open until filled, at least until Sep. 30, 2023.</p>
+<p>The position will be open until filled, at least until May 15, 2024.</p>
 
-<p>Preferable start date: Oct. 2023 – Jan. 2024.</p>
+<p>Preferable start date: before July 2024.</p>
 </div>
 
 <div id="publications" style="width:1100px;float:left">
