added PAGES article

--- a/humor.html
+++ b/humor.html
@@ -33,6 +33,7 @@
 <div id="links" style="float:right;width:300px;margin:0px 0px 0px 0px">
 <p style="text-align:right"><b>Related Links</b></p>
 <ul class="menueright">
+<li><a class="menueright" href="http://www.seppo.net/cartoons/thumbnails.php?album=13">Cartoons by Seppo</a></li>
 <li><a class="menueright" href="http://www.die-klimaschutz-baustelle.de/climate_change_jokes.html">Climate Jokes</a></li>
 <li><a class="menueright" href="https://www.conserve-energy-future.com/best-environmental-jokes.php/">Enviro Jokes</a></li>
 </ul>
