--- a/publications.html
+++ b/publications.html
@@ -680,12 +680,17 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 
 <a id="1997"><h4>1997</h4> </a>
 
-<li>Stocker, T. F. and Schmittner, A. (1997)<br>
+<li>Stocker, T. F. and A. Schmittner (1997)<br>
 <b>Influence of CO<sub>2</sub> emission rates on the stability of the thermohaline circulation</b>
 <div class="journal"><i>Nature,</i> 388, 862-865.</div>
 <div class="publinks"><a class="publinks" href="https://andreasschmittner.github.io/pdf/S/stocker97nat.pdf"> pdf </a><a class="publinks" href="http://www.nature.com/nature/journal/v388/n6645/abs/388862a0.html"> html </a> </div>
 
 <a id="other"><h2>Other Publications</h2></a>
+
+<li>Muglia, J., Mulitza, S., Repschläger, J., and A. Schmittner (2024)<br>
+<b>A global database of carbon and oxygen isotopes for the last deglaciation</b>
+<div class="journal">in <i>PAGES Magazine,</i> January, vol 32, nr 1, 61.</div>
+<div class="publinks"><a class="publinks" href="https://doi.org/10.22498/pages.32.1.61">https://doi.org/10.22498/pages.32.1.61</a></div>
 
 <li>Schmittner, A. (2023)<br> 
  <b>Topography affects not only interhemispheric asymmetry of westerly winds and thus storminess but also ocean circulation</b> 
