added data link to PAGES article

--- a/publications.html
+++ b/publications.html
@@ -691,6 +691,7 @@ from carbon isotopes (&#948<sup>13</sup>C) </b>
 <b>A global database of carbon and oxygen isotopes for the last deglaciation</b>
 <div class="journal">in <i>PAGES Magazine,</i> January, vol 32, nr 1, 61.</div>
 <div class="publinks"><a class="publinks" href="https://doi.org/10.22498/pages.32.1.61">https://doi.org/10.22498/pages.32.1.61</a></div>
+<div class="publinks"><a class="publinks" href="https://zenodo.org/records/11187264">data</a></div>
 
 <li>Schmittner, A. (2023)<br> 
  <b>Topography affects not only interhemispheric asymmetry of westerly winds and thus storminess but also ocean circulation</b> 
