added Gen Dread

--- a/climate_change.html
+++ b/climate_change.html
@@ -39,6 +39,7 @@
 <li><a class="menueright" href="#policy">Policy</a></li>
 <li><a class="menueright" href="#science">Science</a></li>
 <li><a class="menueright" href="#skeptics">Skeptics</a></li>
+<li><a class="menueright" href="#solutions">Solutions</a></li>
 <li><a class="menueright" href="#teachers">For Teachers</a></li>
 <li><a class="menueright" href="#videos">Videos</a></li>
 </ul>
@@ -134,6 +135,12 @@ the peer-reviewed scientific literature is available as the 6th Assessment Repor
 Skeptic:</a> Responses to the most common skeptical arguments on global warming
 <li><a href="http://www.opb.org/news/article/forecast-cloudy/">Forecast Cloudy:</a> OPB documentary
 about climate changes skepticism among TV and state meteorologists
+</ul>
+
+<a id="skeptics"><h2> Solutions </h2></a>
+<ul>
+<li><a href="https://open.oregonstate.education/climatechange/chapter/solutions/">Textbook Chapter</a>
+<li><a href="https://gendread.substack.com/p/a-north-carolina-teenagers-quest">Gen Dread:</a> Teenagers efforts to reduce methane emissions from leaking abandoned oil wells
 </ul>
 
 <h2><a id="teachers"> Resources for Educators </a></h2>
