--- a/presentations.html
+++ b/presentations.html
@@ -30,8 +30,8 @@
 <h2>Public Presentations</h2>
 
 <ul>
-<li>08-02-2021 <b>Modeling Past and Future Climate <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner/modeling-past-and-future-climate">pdf</a>
-<li>08-02-2021 <b>Climate Models <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner/climate-models-249955731">pdf</a>
+<li>08-02-2021 <b>Modeling Past and Future Climate</b> <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner/modeling-past-and-future-climate">pdf</a>
+<li>08-02-2021 <b>Climate Models</b> <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner/climate-models-249955731">pdf</a>
 <li>11-09-2020 <b>Climate Change: Hoax or Apocalypse</b> <a class="publinks" href="https://capeperpetuacollaborative.org/webinar-replay-climate-change/"> Cape Perpetua Speaker Series</a> <a class="publinks" href="https://www.youtube.com/watch?v=Mx8F_BHwpNg&feature=youtu.be"> YouTube</a> 
 <li>10-26-2019 <b>Current and Future Impacts of Climate Change</b> Oregon State University, Valley Library</a>
 <li>03-07-2019 <b>Impacts of Climate Change</b> Sustainability Committee of Evergreen Habitat for Humanity, Vancouver, WA</a>
@@ -49,6 +49,7 @@
 
 <h2>Scientific Presentations</h2>
 <ul>
+<li>02-21-2024 <b>Variability of Ocean δ<sup>13</sup>C From the Last Glacial Maximum to the Holocene</b> Gordon Research Conference on Ocean Mixing, Mount Holyoke College. <a class="publinks" href="https://drive.google.com/file/d/1uUsvWs_j4q44kVnxK-Z5yk3GDRtgXAf9/view?usp=sharing">pdf</a>
 <li>06-08-2021 <b>Tidal Mixing in the Glacial Ocean</b> Gordon Research Conference on Ocean Mixing, Mount Holyoke College. <a class="publinks" href="https://www.slideshare.net/AndreasSchmittner1/lgmmixingpdf">pdf</a>
 <li>02-08-2021 <b>Glacial Deoxygenation Driven by Increased Disequilibrium</b> CESM Paleoclimate Working Group Meeting. <a class="publinks" href="https://youtu.be/NHrsLINxdCY?t=7234"> recording</a>
 <li>05-12-2020 <b>Meridional Overturning and Mixing in the Glacial Ocean</b> CEOAS Physics of Oceans and Atmospheres Seminar. <a class="publinks" href="https://media.oregonstate.edu/media/t/1_db6so68i"> recording</a>
