--- a/climate_change.html
+++ b/climate_change.html
@@ -137,7 +137,7 @@ Skeptic:</a> Responses to the most common skeptical arguments on global warming
 about climate changes skepticism among TV and state meteorologists
 </ul>
 
-<a id="skeptics"><h2> Solutions </h2></a>
+<a id="solutions"><h2> Solutions </h2></a>
 <ul>
 <li><a href="https://open.oregonstate.education/climatechange/chapter/solutions/">Textbook Chapter</a>
 <li><a href="https://gendread.substack.com/p/a-north-carolina-teenagers-quest">Gen Dread:</a> Teenagers efforts to reduce methane emissions from leaking abandoned oil wells
