added Katrina's Thesis

--- a/Projects/LGM_mixing/index.html
+++ b/Projects/LGM_mixing/index.html
@@ -78,6 +78,16 @@ guidelines</a>.
 
 <div id="publications" style="width:1100px;float:left">
 <a id="publications"><h2>Thesis</h2></a>
+<li>Katrina Vickery (2023)<br>
+<b>Empowering the Experts: Design, Implementation, and Evaluation of a Climate Change Communication Workshop</b>
+<div class="journal"><i>Masters of Science Thesis,</i> Oregon State University.</div>
+<div class="publinks">
+<a class="publinks" href="https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/f7623m73k?locale=en"> html </a>
+<a class="publinks" href="https://ir.library.oregonstate.edu/downloads/r207tx69h?locale=en"> pdf</a>
+</div></li>
+</div><!--Thesis-->
+
+<a id="publications"><h2>Thesis</h2></a>
 <li>Danil Thorstensson (2021)<br>
 <b>Evaluation of a Variable Mixing Efficiency Parameterization on the Simulation of Last Glacial Maximum (LGM) Oceanic Circulation</b>
 <div class="journal"><i>Honors Batchelor of Science Thesis,</i> Oregon State University.</div>
