added PLOS paper

--- a/index.html
+++ b/index.html
@@ -94,18 +94,15 @@ interested. <a href="http://scarc.library.oregonstate.edu/omeka/exhibits/show/cl
 
 <h2>Just Published</h2>
 
-<li>Muglia, J., S. Mulitza, J. Repschläger, A. Schmittner, L. Lembke-Jene, L. Lisiecki, A. Mix, R. Saraswat, E. Sikes, C. Waelbroeck, J. Gottschalk, J. Lippold, D. Lund, G. Martinez-Mendez, E. Michel, F. Muschitiello, S. Naik, Y. Okazaki, L. Stott, A. Voelker, and N. Zhao (2023)<br> 
- <b>A global synthesis of high-resolution stable isotope data from benthic foraminifera of the last deglaciation</b> 
- <div class="journal"><i>Scientific Data, </i> 10(1), 131, <a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2"> doi: 10.1038/s41597-023-02024-2.</a></div>
+<li>Schmittner, A., and N. J. Fillman<br>
+	<b>Carbon and Carbon-13 in the Preindustrial and Glacial Ocean</b>
+	<div class="journal"><i>PLOS Climate, </i> 3(7): e0000434<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434"> doi: 10.1371/journal.pclm.0000434.</a></div>
 	<div class="publinks">
-		<a class="publinks" href="https://doi.org/10.5281/zenodo.7502756">data</a>
-		<a class="publinks" href="https://doi.org/10.1038/s41597-023-02024-2">html</a>
-		<a class="publinks" href="https://www.nature.com/articles/s41597-023-02024-2.epdf?sharing_token=ImHO3K536Mqzz1byHJxTztRgN0jAjWel9jnR3ZoTv0PHqRzdwVEOkwkfQD705vNPldcH6Rnws5zN_Vtld3ZmB951steDvAPmEFJr2cfADMN1BEec0AE3PqUUOkPEIUQA-ei39UX_LnG0PfaTLZnUQFkziPD7FVRv7P5Sqahnrrs%3D">pdf</a>
+		<a class="publinks" href="https://zenodo.org/records/11224826">data</a>
+		<a class="publinks" href="https://doi.org/10.1371/journal.pclm.0000434">html</a>
+		<a class="publinks" href="https://journals.plos.org/climate/article/file?id=10.1371/journal.pclm.0000434&type=printable">pdf</a>
 	</div>
 </li>
-
-<h2>Postdoc Opportunity</h2>
-<p>I'm looking for a postdoc who wants to work on a <a class="publinks" href="https://andreasschmittner.github.io/Projects/LGM_mixing/"> project about ocean mixing</a>. Feel free to contact me if you're interested.</div></p>
 
 <h2>Committment to Inclusion Statement</h2>
 <p>I believe that different perspectives and backgrounds contribute to a better understanding of our world and of the climate system. For this reason, I value a diverse research team and encourage the expression of different points of view, particularly of voices that have historically been suppressed or underrepresented in climate science. Coming from Germany, I know how much damage hate can produce, but I also know that people can change, reject hate, and embrace an inclusive and supportive community for everybody. However, I also believe that words are not enough and that we must continuously strive towards a more inclusive world. Specific activities regarding diversity and inclusion are listed <a class="publinks" href="inclusion.html">here</a>.</div></p>
